# transcription_preprocessor_pipeline

./: .gitignore  README.md  objective.md  objective_gpu_arc.md  pyproject.toml  requirements-minimal.txt  requirements.txt
.cursor/plans/: eval_script_pipeline_benchmark_99801294.plan.md  gemma_asr_backend_fc9b12f5.plan.md  pipeline_fixes_and_openai_client_3cfb1362.plan.md  segmentation_service_production_refactor_469ce5d8.plan.md  segmentation_service_review_cec6b179.plan.md  vad_service_production_hardening_9cfdd634.plan.md  тз_упрощённого_asr_c17a48e0.plan.md
.cursor/skills/audio-asr-pipeline/: SKILL.md
airflow_scaffold/: README.md
airflow_scaffold/dags/: dag_asr_mono.py  dag_asr_stereo_callcenter.py
airflow_scaffold/plugins/asr_helpers/: __init__.py  config.py  persistence.py  stereo.py
audio_asr_pipeline/: __init__.py  chunking.py  config.py  errors.py  io.py  merge.py  models.py  pipeline.py  preprocess.py  remote_clients.py  segmenters.py  transcribe.py  utils.py  vad.py
docs/: AIRFLOW.md  ARCHITECTURE.md  TZ_simplified_asr_pipeline.md
scripts/: eval_test_audio.py
services/segmentation_service/: .dockerignore  .env.example  Dockerfile  README.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements.txt  segmentation_service_review.md
services/segmentation_service/segmentation_service/: __init__.py  app.py  config.py  inference.py  logging_config.py  metrics.py  models.py
services/segmentation_service/tests/: conftest.py  test_endpoints.py  test_endpoints_live.py  test_inference.py  test_integration_audio.py  test_models.py  test_new_features.py
services/segmentation_service/tests/results/: metrics_20260412_112155.json  metrics_20260412_112209.json
services/vad_service/: .env.example  .gitignore  Dockerfile  README.md  SKILL.md  pyproject.toml  vad_service_review.md
services/vad_service/tests/: conftest.py  test_endpoints.py  test_gpu_integration.py  test_inference.py  test_models.py
services/vad_service/vad_service/: __init__.py  app.py  config.py  inference.py  logging_config.py  metrics.py  models.py
test_audio_mad/: voice_02-04-2026_23-18-27.txt  voice_04-04-2026_02-06-12.txt  voice_30-03-2026_19-39-46.txt  voice_31-03-2026_02-15-23.txt
tests/: test_config_remote.py  test_config_validation.py  test_ina_labels.py  test_merge_offsets.py  test_pipeline_batch.py  test_remote_clients.py  test_stereo_shape.py  test_sync_wrapper_loop.py  test_transcribe_multipart_async.py
