[project]
name = "audio-asr-pipeline"
version = "0.1.0"
description = "Preprocess audio (coarse speech/music, VAD), chunk, and transcribe via OpenAI-compatible STT."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    # Silero VAD JIT can raise TorchScript NYI on some PyTorch+Windows builds; ONNX backend avoids that.
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
# ina: optional stack for default coarse segmenter (see [tool.uv] override-dependencies on Windows).
eval = ["jiwer>=3.0.0", "openpyxl>=3.1.0"]
ina = ["inaSpeechSegmenter>=0.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audio_asr_pipeline"]

[tool.uv]
# inaSpeechSegmenter declares tensorflow[and-cuda], which pulls nvidia-nccl-cu12 (Linux-only wheels).
# On Windows that makes `uv sync --extra ina` fail; plain tensorflow matches the win_amd64 wheel set.
override-dependencies = [
    "tensorflow==2.21.0; sys_platform == 'win32'",
]
dev-dependencies = [
    "pytest>=8.0.0",
]
