[project]
name = "segmentation-service"
version = "0.1.0"
description = "GPU-accelerated speech segmentation service using pyannote.audio. Exposes a FastAPI HTTP endpoint for coarse speech/non-speech segmentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "pyannote.audio>=3.3.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["segmentation_service"]

# PyTorch CUDA wheels live on a separate index.
# `uv sync` will pull GPU-enabled torch from here when available.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
