[project]
name = "segmentation-service"
version = "0.1.0"
description = "GPU-accelerated speech segmentation service using pyannote.audio. Exposes a FastAPI HTTP endpoint for coarse speech/non-speech segmentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "pyannote.audio>=3.3.0,<3.5",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["segmentation_service"]

# PyTorch CUDA wheels: cu121 lowers minimum NVIDIA driver vs cu124/cu126.
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
